Last changes on experiments

--- a/doc/3_Desarrollo_Vel.tex
+++ b/doc/3_Desarrollo_Vel.tex
@@ -246,25 +246,27 @@ Los tiempos omitidos en la Tabla \ref{table:stadistical_tests}, en las filas 6, 
         \hline
         \textbf{\#} & \textbf{Método} & \textbf{Periodo} & \textbf{k} & \textbf{c} & \textbf{RMSE} & \textbf{r} & \textbf{RB} & \textbf{Tiempo}\\
         \hline
-        1   & PSO                 & 2013        & 2.78 & 3.12                   & 2.26\cdot$10^{-2}$ & 0.984  & 1.98\cdot$10^{-3}$  & 1.74s\\
-        2   & PSO                 & 2014        & 2.91 & 3.37                   & 2.32\cdot$10^{-2}$ & 0.982  & 7.54\cdot$10^{-4}$  & 1.63s\\
-        3   & PSO                 & 2015        & 2.65 & 3.10                   & 1.64\cdot$10^{-2}$ & 0.992  & 3.02\cdot$10^{-3}$  & 1.59s\\
+        1   & PSO                 & 2013        & 2.78 & 3.12                   & 2.26$\cdot 10^{-2}$ & 0.984  & 1.98$\cdot 10^{-3}$  & 1.74s\\
+        2   & PSO                 & 2014        & 2.91 & 3.37                   & 2.32$\cdot 10^{-2}$ & 0.982  & 7.54$\cdot 10^{-4}$  & 1.63s\\
+        3   & PSO                 & 2015        & 2.65 & 3.10                   & 1.64$\cdot 10^{-2}$ & 0.992  & 3.02$\cdot 10^{-3}$  & 1.59s\\
         \hline
-        4   & PSO (50p)           & 2015-14-13  & 3.47 & 3.07                   & 3.61\cdot$10^{-2}$ & 0.975  & 4.11\cdot$10^{-3}$  & 2.00s\\
-        5   & PSO (200p)          & 2015-14-13  & 2.78 & 3.20                   & 1.61\cdot$10^{-2}$ & 0.994  & 1.91\cdot$10^{-3}$  & 7.78s\\
+        4   & PSO (50p)           & 2015-14-13  & 3.47 & 3.07                   & 3.61$\cdot 10^{-2}$ & 0.975  & 4.11$\cdot 10^{-3}$  & 2.00s\\
+        5   & PSO (200p)          & 2015-14-13  & 2.78 & 3.20                   & 1.61$\cdot 10^{-2}$ & 0.994  & 1.91$\cdot 10^{-3}$  & 7.78s\\
         \hline
-        6   & PSO (200p y todos los datos)          & 2013        & 2.78 & 3.20 & 2.41\cdot$10^{-2}$ & 0.981  & 1.92\cdot$10^{-3}$  & - \\
-        7   & PSO (200p y todos los datos)          & 2014        & 2.78 & 3.20 & 3.01\cdot$10^{-2}$ & 0.970  & 8.89\cdot$10^{-6}$  & - \\
-        8   & PSO (200p y todos los datos)          & 2015        & 2.78 & 3.20 & 2.02\cdot$10^{-2}$ & 0.986  & 1.92\cdot$10^{-3}$  & - \\
+        6   & PSO (200p y todos los datos)          & 2013        & 2.78 & 3.20 & 2.41$\cdot 10^{-2}$ & 0.981  & 1.92$\cdot 10^{-3}$  & - \\
+        7   & PSO (200p y todos los datos)          & 2014        & 2.78 & 3.20 & 3.01$\cdot 10^{-2}$ & 0.970  & 8.89$\cdot 10^{-6}$  & - \\
+        8   & PSO (200p y todos los datos)          & 2015        & 2.78 & 3.20 & 2.02$\cdot 10^{-2}$ & 0.986  & 1.92$\cdot 10^{-3}$  & - \\
         \hline
-        9   & PSO                 & Ene-Mar     & 2.85 & 3.15                   & 2.31\cdot$10^{-2}$ & 0.982  & 6.41\cdot$10^{-3}$  & 1.29s\\
-        10  & PSO                 & Abr-Jun     & 2.76 & 2.65                   & 2.04\cdot$10^{-2}$ & 0.993  & 3.03\cdot$10^{-3}$  & 1.34s\\
-        11  & PSO                 & Jul-Sep     & 2.66 & 2.83                   & 2.51\cdot$10^{-2}$ & 0.985  & 4.43\cdot$10^{-3}$  & 1.19s\\
-        12  & PSO                 & Oct-Dic     & 3.40 & 3.75                   & 2.60\cdot$10^{-2}$ & 0.978  & 7.16\cdot$10^{-4}$  & 1.30s\\
+        9   & PSO                 & Ene-Mar     & 2.85 & 3.15                   & 2.31$\cdot 10^{-2}$ & 0.982  & 6.41$\cdot 10^{-3}$  & 1.29s\\
+        10  & PSO                 & Abr-Jun     & 2.76 & 2.65                   & 2.04$\cdot 10^{-2}$ & 0.993  & 3.03$\cdot 10^{-3}$  & 1.34s\\
+        11  & PSO                 & Jul-Sep     & 2.66 & 2.83                   & 2.51$\cdot 10^{-2}$ & 0.985  & 4.43$\cdot 10^{-3}$  & 1.19s\\
+        12  & PSO                 & Oct-Dic     & 3.40 & 3.75                   & 2.60$\cdot 10^{-2}$ & 0.978  & 7.16$\cdot 10^{-4}$  & 1.30s\\
         \hline 
-        13  & PSO (datos brutos)  & 2015        & 1.00 & 9.49                   & 4.51\cdot$10^{-2}$ & 0.751  & 6.7\cdot$10^{-1}$   & 1.65s\\ 
+        13  & PSO (datos brutos)  & 2015        & 1.00 & 9.49                   & 4.51$\cdot 10^{-2}$ & 0.751  & 6.7$\cdot 10^{-1}$   & 1.65s\\ 
         \hline
-
+     \end{tabular}
+    }   
+\end{table}
         %\hline
         %\textbf{\#} & \textbf{Método} & \textbf{Periodo} & \textbf{k} & \textbf{c} & \textbf{RMSE} & \textbf{r} & \textbf{RB} & \textbf{Tiempo}\\
         %\hline
@@ -286,11 +288,6 @@ Los tiempos omitidos en la Tabla \ref{table:stadistical_tests}, en las filas 6, 
         %\hline 
         %13  & PSO (datos brutos)  & 2015        & 1.00 & 9.49 & 0.0451794472583 & 0.751732944794  & 0.676094670465 & 1.6544219s\\ 
         %\hline
-
-    \end{tabular}
-    }   
-\end{table}
-
 \newpage
 \section{Conclusiones del capítulo}
 En este capítulo se implementó la propuesta realizada en Carneiro et al. \cite{Carneiro15} para ajustar los parámetros de la distribución de Weibull a los datos de velocidad del viento en Valparaíso. Los resultados confirman que el método propuesto permite obtener soluciones de buena calidad, bajo el punto de vista de los test estadísticos aplicados (RMSE, r y RB), y los gráficos generados. Sin embargo, se debe tener en consideración que la distribución de Weibull representa el promedio diario de velocidades medidas del viento, detalle que no siempre se menciona en los trabajos que utilizan esta distribución, pero que se explican en algunos como en Fadare \cite{Fadare08}. Este modelo es útil para aplicaciones como, la estimación del potencial eléctrico en determinada región.\\
