--- a/doc/bibliography/bibliography.bib
+++ b/doc/bibliography/bibliography.bib
@@ -1,29 +1,33 @@
-@techreport{minenergia14,
+@article{minenergia14,
     title={Energ{\'i}as Renovables en Chile. El potencial E{\'o}lico, Solar e Hidroel{\'e}ctrico de Arica a Chilo{\'e}},
-    author={Santana Christian O.},
-    institution={MINENERGIA GIZ},
+    author={Santana, Christian O. and Falvey, Mark and Ibarra, Marcelo and García, Monserrat},
     year={2014},
-    note= "Proyecto Estrategia de Expansi{\'o}n de las Energ{\'i}as Renovables en los Sistemas El{\'e}ctricos Interconectados"
+    journal={Proyecto Estrategia de Expansi{\'o}n de las Energ{\'i}as Renovables en los Sistemas El{\'e}ctricos Interconectados},
+    pages={17--54}
 }
 @techreport{Aera15,
     title={Australian Energy Resource Assessment},
     author={Carson, L.},
-    institution={Commonwealth of Australia - Geoscience Australia},
+    journal={Commonwealth of Australia - Geoscience Australia},
     year={2014},
-    note= "Chapter 9 Wind Energy"
+    pages={239--260}
 }
 @article{Carneiro15,
-    author="Carneiro, Tatiane C. and Melo, Sofia P. and Carvalho, Paulo C. M. and Braga, Arthur Pl{\'i}nio de S.",
+    author={Carneiro, Tatiane C. and Melo, Sofia P. and Carvalho, Paulo C. M. and Braga, Arthur Pl{\'i}nio de S.},
     title={Particle Swarm Optimization method for estimation of Weibull parameters: A case study for the Brazilian northeast region},
-    publisher={Elsevier Ltd},
-    year={2015}
+    journal={Elsevier Ltd},
+    year={2015},
+    volume={86},
+    pages={751--759}
 }
 @article{Heckenbergerova15,
     author={Heckenbergerova, Jana and Musilek, Petr and Kr\"{o}mer, Pavel},
     title={Optimization of Wind Direction Distribution Parameters Using Particle Swarm Optimization},
-    publisher={Springer International Publishing},
-    year={2015}
-}
+    journal={Springer International Publishing},
+    year={2015},
+    volume={334},
+    pages={15--26}
+} %%ACCAAAA
 @article{Winddirelse15,
     author={Masseran, Nurulkamal and Razali, Ahmad Mahir},
     title={Modeling the wind direction behaviors during the monsoon seasons in Peninsular Malaysia},
