--- a/doc/bibliography/bibliography.bib
+++ b/doc/bibliography/bibliography.bib
@@ -27,26 +27,29 @@
     year={2015},
     volume={334},
     pages={15--26}
-} %%ACCAAAA
+}
 @article{Winddirelse15,
     author={Masseran, Nurulkamal and Razali, Ahmad Mahir},
     title={Modeling the wind direction behaviors during the monsoon seasons in Peninsular Malaysia},
-    publisher={Elsevier Ltd},
-    year={2015}
+    journal={Elsevier Ltd},
+    year={2015},
+    volume={56},
+    pages={1419--1430}
 }
 @article{Kongnam15,
     author={Kongnam, C. and Nuchprayoon, S.},
     title={A particle swarm optimization for wind energy control problem},
-    publisher={Elsevier Ltd},
-    year={2015}
+    journal={Elsevier Ltd},
+    year={2015},
+    volume={35},
+    pages={2431--2438}
 }
 @article{Psoexplain14,
     author={Kaveh, A.},
-    title={Particle Swarm Optimization},
-    publisher={Springer International Publishing},
+    title={Advances in Metaheuristic algorithms for optimal design of structures},
+    journal={Springer International Publishing},
     year={2014},
-    pages={9-40},
-    note= "Chapter of Advances in Metaheuristic Algorithms for Optimal Design of Structures"
+    pages={9--40}
 }
 @conference{Kennedy95,
     author={Kennedy, James and Eberhart, Russell},
@@ -60,90 +63,112 @@
     title={Clustering on the Unit Hypersphere using von Mises-Fisher Distributions},
     journal={Journal of Machine Learning Research},
     editor={Ridgeway, Greg},
-    year={2005}
+    year={2005},
+    pages={1345--1382}
 }
 @article{Chang10,
     author={Chang, Tian Pau},
     title={Performance comparison of six numerical methods in estimating Weibull parameters for wind energy application},
-    publisher={Elsevier Ltd},
-    year={2010}
+    journal={Elsevier Ltd},
+    year={2010},
+    pages={272--282}
 }
 @article{Chang10_2,
     author={Chang, Tian Pau},
     title={Wind energy assessment incorporating particle swarm optimization method},
-    publisher={Elsevier Ltd},
-    year={2010} 
+    journal={Elsevier Ltd},
+    year={2010},
+    volume={52},
+    pages={1630--1637} 
 }
 @article{Fadare08,
     author={Fadare, D.A.},
     title={A statistical analysis of wind energy potential in Ibadan, Nigeria, based on Weibull distribution function},
-    publisher={Pacific Journal of Science and Tecnology},
-    year={2008} 
+    journal={Pacific Journal of Science and Tecnology},
+    year={2008},
+    volume={9},
+    pages={110--119}
 }
 @article{Weisser02,
     author={Weisser, Daniel},
-    title={A wind energy analysis if Grenada: an estimation using the Weibull density function},
-    publisher={Elsevier Ltd},
-    year={2002} 
+    title={A wind energy analysis of Grenada: an estimation using the Weibull density function},
+    journal={Elsevier Ltd},
+    year={2002},
+    volume={28},
+    pages={1803--1812} 
 }
 @article{Dabbaghiyan15,
     author={Dabbaghiyan, Amir and Fazelpour, Farivar and Abnavim, Mohhamadreza Dehghan and Rosen, Marc a.},
     title={Evaluation of wind energy potential in province of Bushehr, Iran},
-    publisher={Elsevier Ltd},
-    year={2015}
+    journal={Elsevier Ltd},
+    year={2015},
+    volume={55},
+    pages={455--466}
 }
 @article{Carta07,
     author={Carta, José A. and Bueno, Celia and Ramírez, Penélope},
     title={Statistical modelling of directional wind speeds using mixtures of von Mises distribution: Case study},
-    publisher={Elsevier Ltd},
-    year={2007}
+    journal={Elsevier Ltd},
+    year={2007},
+    volume={49},
+    pages={897--907}
 }
 @article{RosaViento,
     author={Ramírez, Evangelina Lara and Vivanco, Sonia Fabiola Moreno},
     title={Análisis de parámetros metereológicos utilizando el modelo de la Rosa de los vientos},
-    publisher={Biblioteca universitaria Raúl Rangel Frías},
+    journal={Biblioteca universitaria Raúl Rangel Frías},
     year={2007}
 }
 @article{Heckenbergerova13,
     author={Heckenbergerova, Jana and Musilek, Petr and Mejznar, Jakub and Vancura, Martin},
     title={Estimation of wind direction distribution with genetic algorithms},
-    publisher={26th IEEE Canadian Conference Of Electrical And Computer Engineering},
-    year={2013}
+    journal={26th IEEE Canadian Conference Of Electrical And Computer Engineering},
+    year={2013},
+    pages={1730--1735}
 }
 @article{Gavin16,
     author={Gavin, Henri P.},
     title={The Levenberg-Marquardt method for nonlinear least squares curve-fitting problems},
-    publisher={Department of Civil and Environmental Engineering, Duke University},
+    journal={Department of Civil and Environmental Engineering, Duke University},
     year={2016}
 }
 @article{Shata05,
     author={Shata, A.S Ahmed and Hanitsch Rolf},
     title={Evaluation of wind energy potential and electricity generation on the coast of Mediterranean 
     sea in Egypt},
-    publisher={Elsevier Ltd},
-    year={2005}
+    journal={Elsevier Ltd},
+    year={2005},
+    volume={31},
+    pages={1183--1202}
 }
 @article{Beer91,
     author={Beer, Tom},
     title={The interaction of wind and fire},
-    publisher={Kluwer Academic Publishers},
-    year={1991}
+    journal={Kluwer Academic Publishers},
+    year={1991},
+    volume={54},
+    pages={287--308}
 }
 @article{Bedos01,
     author={Bedos, Carole and Cellier, Pierre and Calvet, Raoul and Barriuso, Enrique and Gabrielle, Benoît},
     title={Mass transfer of pesticides into the atmosphere by volatilization from soils and plants: overview},
-    publisher={INRA, EDP Sciences},
-    year={2001}
+    journal={INRA, EDP Sciences},
+    year={2001},
+    volume={22},
+    pages={21--33}
 }
 @article{Portugues12,
     author={Portugués, E. García and Crujeiras, R. M. and Manteiga, W. González},
     title={Exploring wind direction and dióxido de azufre concentration by circular-linear density estimation},
-    publisher={Springer-Verlag},
-    year={2012}
+    journal={Stochastic Environmental Research and Risk Assessment},
+    year={2012},
+    volume={27},
+    pages={1055--1067}
 }
 @article{KnotsMeterSeconds,
     author={Mechtly, E. A.},
     title={The International System of Units. Physical constants and conversion factors},
-    publisher={Scientific and Technical Information Office, NATIONAL AERONAUTICS AND SPACE ADMINISTRATION},
-    year={1973}
+    journal={Scientific and Technical Information Office, NATIONAL AERONAUTICS AND SPACE ADMINISTRATION},
+    year={1973},
+    page={13}
 }
