--- a/doc/memoria.tex
+++ b/doc/memoria.tex
@@ -74,9 +74,9 @@
 \section*{Resumen}\chaptermark{Abstract}
 La velocidad y la dirección del viento son factores esenciales en el estudio de este fenómeno meteorológico. Diversos trabajos realizados en las áreas de energía eólica, medio ambiente y desastres naturales proponen métodos para modelar estas características del viento. La distribución de Weibull es ampliamente utilizada para modelar la velocidad, mientras que la mezcla de distribuciones de von Mises es sugerida para la dirección. Comúnmente, para el ajuste de los parámetros de estas distribuciones a ciertos datos recolectados, se utilizan métodos numéricos, sin embargo, estos pueden presentar deficiencias en cuanto a tiempos de ejecución o calidad de solución. En esta memoria, se implementa la meta-heurística \emph{Particle Swarm Optimization} para el ajuste de los parámetros de las distribuciones mencionadas a los datos del viento de la comuna de Valparaíso. Esta técnica provee de buenas soluciones en cortos tiempos de ejecución, siendo adaptable para el ajuste de ambas distribuciones. Además, se propone una estrategia para el control de la convergencia prematura del PSO, mejorando el trabajo realizado a la fecha.
 \section*{Abstact}
-The speed and direction of the wind are essential factors in the study of this meteorological phenomenon. Many works performed in the areas of wind energy, environment and natural disasters propose methods to model these wind properties. The Weibull distribution is widely used to model velocity, while the mixture of von Mises distribution is suggested for direction. Commonly, numerical methods are used for the adjustment of the parameters of these distributions to certain data collected, however, these can present deficiencies in terms of execution times or quality solution. In this report, the meta-heuristic Particle Swarm Optimization is implemented for the adjustment of the parameters of the mentioned distributions to the data of the wind of the commune of Valparaiso. This technique provides good solutions in short execution times, being adaptable for the adjustment of both distributions. Furthermore, a strategy is proposed for the control of the premature convergence of the PSO algorithm, improving the work done to date.
+The speed and direction of the wind are essential factors in the study of this meteorological phenomenon. Many works performed in the areas of wind energy, environment and natural disasters propose methods to model these wind properties. The Weibull distribution is widely used to model velocity, while the mixture of von Mises distribution is suggested for direction. Commonly, numerical methods are used for the adjustment of the parameters of these distributions to certain data collected, however, these can present deficiencies in terms of execution times or solution quality. In this study, the meta-heuristic Particle Swarm Optimization is implemented for the adjustment of the parameters of the mentioned distributions to the data of wind of the commune of Valparaiso. This technique provides good solutions in short execution times, being adaptable for the adjustment of both distributions. Furthermore, a strategy is proposed for the control of the premature convergence of the PSO algorithm, improving the work done to date.
 \newpage
-\chapter*{ }
+\chapter*{ }\chaptermark{ }
 \vspace{-3cm}
 \newpage
 
