--- a/doc/1_Introduccion.tex
+++ b/doc/1_Introduccion.tex
@@ -3,9 +3,9 @@
 \chapter{Introducción}
 
 \section{Identificación del problema}
-El viento es uno de los fenómenos meteorológicos más comunes de las zonas costeras de Valparaíso. Su presencia incide en distintos aspectos del medio ambiente, como las condiciones del clima, la sensación térmica, la propagación de los pesticidas en plantaciones, algunos desastres naturales como los incendios, entre otros. Esto atrae el interés de investigadores dedicados a estudiar este fenómeno, con el fin de poder controlar las variables que condicionan su comportamiento, de manera de poder predecir los fenómenos subyacentes a este.\\ 
+El viento es uno de los fenómenos meteorológicos más comunes de las zonas costeras de Valparaíso. Su presencia incide en distintos aspectos del medio ambiente, como las condiciones del clima, la sensación térmica, la propagación de los pesticidas en plantaciones, desastres naturales como los incendios, entre otros. Esto atrae el interés de investigadores dedicados a estudiar este fenómeno, con el fin de poder controlar las variables que condicionan su comportamiento, de manera de poder predecir los fenómenos subyacentes a este.\\ 
 Entre los diversos efectos del viento, se encuentra su capacidad de mover objetos, lo cual ha permitido al hombre aprovechar esta propiedad para convertir la energía cinética del viento en energía eléctrica. Dicha fuente de energía es conocida como energía eólica, ampliamente calificada como renovable y poco contaminante.\\
-Acorde a esto, en los últimos años, tanto el gobierno de Chile como la ciudadanía, han mostrado un creciente interés en el uso de las fuentes de energías renovables y con poco impacto ambiental, por lo que distintos proyectos en la materia han sido llevados a cabo, desde estudios de factibilidad y recopilación de datos hasta el emplazamiento de las primeras centrales de fuentes de energía limpia. El año 2014, el ministerio de energía publicó un extenso reporte acerca de la situación actual del país en materias de energías renovables, en donde se pueden ver distintas proyecciones y estimaciones de implementación de posibles plantas de generación a lo largo del país. \cite{minenergia14}\\
+Acorde a esto, en los últimos años, tanto el gobierno de Chile como la ciudadanía, han mostrado un creciente interés en el uso de las fuentes de energía renovables y con poco impacto ambiental, por lo que distintos proyectos en la materia han sido llevados a cabo, desde estudios de factibilidad y recopilación de datos hasta el emplazamiento de las primeras centrales de fuentes de energía limpia. El año 2014, el ministerio de energía publicó un extenso reporte acerca de la situación actual del país en materias de energías renovables, en donde se pueden ver distintas proyecciones y estimaciones de implementación de posibles plantas de generación a lo largo del país. \cite{minenergia14}\\
 %%pesticidas ????¿
 
 Cualquiera sea el motivo de estudio de las características del viento (en particular el tema energético), existen dos variables fundamentales a considerar: su velocidad y su dirección. Ejemplo de ello es el estudio realizado sobre el potencial eléctrico en la provincia de Bushehr, Irán por Dabbaghiyan et al. \cite{Dabbaghiyan15}, o el trabajo de Chang en Taiwan \cite{Chang10_2}.\\ 
@@ -30,8 +30,8 @@ Aplicar métodos actuales de optimización basados en la meta-heurística \emph{
 La estructura del documento tiene la siguiente forma:
 \begin{enumerate}
   \item El \textbf{Capítulo 2} resume el trabajo actual encontrado en la literatura acerca de la meta-heurística \emph{Particle Swarm Optimization} y las técnicas existentes para hallar los parámetros de ajuste de las distribuciones de densidad de probabilidad de Weibull y la \emph{mixture of von Mises distribution}.
-  \item El \textbf{Capítulo 3} explica la implementación del PSO para el ajuste de la función de densidad de probabilidad de Weibull a los datos de velocidad del viento.
-  \item El \textbf{Capítulo 4} explica la implementación del PSO para el ajuste de la función de densidad de probabilidad de von Mises (\emph{mixture of von Mises distribution}) a los datos de dirección del viento.
+  \item El \textbf{Capítulo 3} explica la implementación del PSO para el ajuste de la función de densidad de probabilidad de Weibull a los datos de velocidad del viento. Posteriormente se evalúan los resultados obtenidos.
+  \item El \textbf{Capítulo 4} explica la implementación del PSO para el ajuste de la función de densidad de probabilidad de von Mises (\emph{mixture of von Mises distribution}) a los datos de dirección del viento. Luego se comparan los resultados obtenidos entre la técnica propuesta en esta memoria y la utilizada en el trabajo de Heckenbergerova et al.\cite{Heckenbergerova15}.
   \item El \textbf{Capítulo 5} expone algunas de las potenciales aplicaciones de los algoritmos propuestos para el ajuste de modelos en datos de velocidad y dirección del viento.
   \item El \textbf{Capítulo 6} muestra las conclusiones generales obtenidas en esta memoria. 
 \end{enumerate}
