--- a/doc/2_Preeliminares.tex
+++ b/doc/2_Preeliminares.tex
@@ -17,7 +17,7 @@ Como se explica en Kaveh \cite{Psoexplain14} $x_{i,j}^{k}$ y $v_{i,j}^{k}$ son l
     \includegraphics[height=50mm]{figures/move_particle.png} 
     \caption{Movimiento de una partícula}
     \vspace{-.25cm} 
-    \caption*{Creado por Kaveh\cite{Psoexplain14}.}
+    \caption*{Fuente: Creado por Kaveh\cite{Psoexplain14}.}
     \label{fig:move_part}
 \end{figure}
 El modelo clásico presentado tiene ciertas deficiencias, en particular la forma en que se actualiza la velocidad no considera una ponderación para el aporte de la velocidad previa en una partícula. Para corregir esto, simplemente se añade un factor que escala la velocidad previa. Como se explica en Kaveh \cite{Psoexplain14}, este peso que se añade a la velocidad previa permite tener un control más apropiado respecto al comportamiento del enjambre. En términos extremos, si la velocidad previa se elimina (peso nulo), las partículas quedan atrapadas en la región local de partida, pero si se le da demasiado peso, las partículas son reacias a converger a las buenas posiciones conocidas.\\
@@ -49,7 +49,7 @@ Dado un conjunto de datos de velocidad obtenidos de la medición del viento, se 
     \includegraphics[height=50mm]{figures/weibull_distribution.png} 
     \caption{Función de distribución de probabilidad de Weibull}
     \vspace{-.25cm} 
-    \caption*{Adaptación propia desde \cite{wikiWeibull}.}
+    \caption*{Fuente: Adaptación propia desde \cite{wikiWeibull}.}
     \label{fig:weibull_fig}
 \end{figure}
  \subsection{Métodos numéricos}  \label{subsec:Numeric_Methods}
@@ -93,7 +93,7 @@ Dado un conjunto de datos de velocidad obtenidos de la medición del viento, se 
             c &= \frac{\bar{v}}{\Gamma(1 + \frac{1}{k})}
         \end{align}    
  \end{enumerate}     
- Estos métodos fueron comparados a través de pruebas de desempeño, usando una simulación basada en el método de Montecarlo. El análisis de los datos del viento fue desarrollado bajo criterios tales como el test Kolmogorov-Smirnov, \emph{parameter error}, \emph{root mean square error} y el error de energía del viento. De ello, bajo distintas condiciones, ciertos métodos se comportan mejor que otros al momento de ajustar la distribución de Weibull a los datos de prueba. \\
+ Estos métodos fueron comparados a través de pruebas de desempeño, usando una simulación basada en el método de Montecarlo. El análisis de los datos del viento fue desarrollado bajo criterios tales como el test Kolmogorov-Smirnov, \emph{parameter error}, \emph{root mean square error} y el error de energía del viento. Dependiendo de la cantidad de datos, ciertos métodos se comportan mejor que otros al momento de ajustar la distribución de Weibull.\\
  En la búsqueda de nuevas alternativas surge una propuesta para mejorar el ajuste de la función de distribución de probabilidad a los datos, a través del uso de la meta-heurística \emph{Particle Swarm Optimization}, propuesta que mejora la calidad de los resultados en comparación con los métodos numéricos presentados.  
  \subsection{Particle Swarm Optimization}
  En Carneiro et al. \cite{Carneiro15}, se realiza un caso de estudio de las características del viento en las zonas costeras de Parnaiba y Maracanaú, y en una zona interior, Petrolina, en Brasil. Allí se explica la necesidad de obtener un modelo para el comportamiento estocástico del viento, de manera de poder evaluar el potencial energético de aquellas regiones. Tal y como se señaló anteriormente, el modelo utilizado para este propósito es la distribución de Weibull. Para poder utilizar dicha distribución, es necesario ajustar los parámetros del modelo a los datos recolectados.\\
@@ -103,7 +103,7 @@ Dado un conjunto de datos de velocidad obtenidos de la medición del viento, se 
     \epsilon(v_i) = \frac{1}{2}\sum_{i=0}^{n}(f_{real}(v_i) - f_{weibull}(v_i))^2
 \end{align}
 Donde $\epsilon$, es el error cuadrático a minimizar entre los valores del histograma de los datos recolectados y la función de distribución de Weibull.\\
-El PSO utilizado es el modelo clásico presentado en la sección anterior, considerando los parámetros $w, c1$ y $c2$, sin embargo, para controlar la convergencia del método, se establece que estos parámetros varíen durante la ejecución del algoritmo dentro de un rango definido ($w \in \{0.4, 0.9\}, c1$ y $c2 \in \{0, 2.5\}$), aumentando los factores de inercia y cognitivo, y disminuyendo el factor social a medida que se avanza en las iteraciones. Esto se traduce en que se explotan las soluciones iniciales, para posteriormente, en las iteraciones finales explorar en una vecindad local al óptimo encontrado hasta el momento.\\
+El PSO utilizado es el modelo clásico presentado en la sección anterior, considerando los parámetros $w, c1$ y $c2$, sin embargo, para controlar la convergencia del método, se establece que estos parámetros varíen durante la ejecución del algoritmo dentro de un rango definido ($w \in \{0.4; 0.9\}, c1$ y $c2 \in \{0; 2.5\}$), aumentando los factores de inercia y cognitivo, y disminuyendo el factor social a medida que se avanza en las iteraciones. Esto se traduce en que se explotan las soluciones iniciales, para posteriormente, en las iteraciones finales explorar en una vecindad local al óptimo encontrado hasta el momento.\\
 Finalmente, para evaluar los resultados de la propuesta, se compara el PSO con cinco de los seis métodos numéricos mencionados en la sección \ref{subsec:Numeric_Methods} utilizados para la estimación de los parámetros de Weibull: \emph{Moment Method} (M), \emph{Energy Method} (E), \emph{Energy Pattern Factor Method} (EPF), \emph{Energy Equivalent Method} (EE) y \emph{Maximum Likelihood} (ML). Además, para medir la calidad de cada método, se utilizan tres \emph{test} estadísticos: \emph{correlation} (r), \emph{relative bias} (RB) y \emph{root mean square error} (RMSE).\\
 Los resultados que se exponen en el trabajo citado demuestran que mediante la meta-heurística \emph{Particle Swarm Optimization} se pueden obtener los mejores parámetros de ajuste para la distribución de Weibull. Un ejemplo de esto es expuesto en la figura \ref{fig:pso_fit}.\\
 \begin{figure}[h!]
@@ -111,10 +111,10 @@ Los resultados que se exponen en el trabajo citado demuestran que mediante la me
     \includegraphics[height=50mm]{figures/pso_fit.png} 
     \caption{Distribución de Weibull con histograma - Maracanaú}
     \vspace{-.25cm} 
-    \caption*{Creado por Carneiro et al.\cite{Carneiro15}.}
+    \caption*{Fuente: Creado por Carneiro et al.\cite{Carneiro15}.}
     \label{fig:pso_fit}
 \end{figure}
-En Kongnam et al. \cite{Kongnam15}, la meta-heurística \emph{Particle Swarm Optimization} es utilizada para el problema del control de la velocidad de las turbinas de viento en una torre eólica, con el fin de maximizar la generación de energía. En dicho trabajo, se utiliza la distribución de Weibull para el modelado de la velocidad del viento. La construcción del PSO es llevada a cabo considerando el problema de la convergencia prematura, por lo que se desarrollan funciones que hacen variar estos parámetros a lo largo de la ejecución, de manera de evitar que el algoritmo se estanque en las iteraciones iniciales.\\
+En Kongnam et al. \cite{Kongnam15}, la meta-heurística \emph{Particle Swarm Optimization} es utilizada para el problema del control de la velocidad de las turbinas de viento en una torre eólica, con el fin de maximizar la generación de energía. En dicho trabajo, se utiliza la distribución de Weibull para el modelado de la velocidad del viento. La construcción del PSO es llevada a cabo considerando el problema de la convergencia prematura, por lo que se desarrollan funciones que hacen variar estos parámetros a lo largo de la ejecución, de manera de evitar que el algoritmo se estanque en las iteraciones iniciales. Estas funciones dependen principalmente del número de iteraciones que se establecen para el PSO, dado que dicho parámetro es utilizado para hacer variar los factores del algoritmo entre valores extremos que se definen para ellos.\\
 
 \section{Dirección del viento}
 En el trabajo acerca del modelado del comportamiento de la dirección del viento en Malasia \cite{Winddirelse15}, se propone que para identificar la(s) dirección(es) dominante del viento se utilice la función de densidad de probabilidad \emph{finite von Mises-Fisher} (FVMF) ajustada a las mediciones obtenidas. Estos datos acerca del viento fueron obtenidos desde cinco estaciones meteorológicas ubicadas en distintas zonas en la península de Malasia.\\
@@ -134,7 +134,7 @@ Por último, los resultados de este trabajo muestran que FVMF provee un razonabl
     \includegraphics[height=100mm]{figures/wind_dir_vonMises.png} 
     \caption{Modelo de ajuste FVMV para suroeste y noreste en la estación Mersing}
     \vspace{-.25cm} 
-    \caption*{Creado por \cite{Winddirelse15}.}
+    \caption*{Fuente: Creado por \cite{Winddirelse15}.}
     \label{fig:wind_dir_vonMises}
 \end{figure}
 
@@ -157,18 +157,19 @@ Donde $k$ es el número de funciones de la mezcla, $j$ es el índice de una part
     v = (\mu, k, w) = (\mu_1, ..., \mu_k,k_1,...,k_k,w_1,...,w_k)
 \end{align}
 Para lograr el objetivo, se obtiene en primer lugar una aproximación numérica de los parámetros del MvM a partir de los datos recolectados de la dirección del viento, estrategia nombrada como estimación analítica en el trabajo de Heckenbergerova et al. \cite{Heckenbergerova15}. Luego optimiza estos parámetros mediante el uso de la meta-heurística \emph{Particle Swarm Optimization}, con parámetros fijos, en donde la solución está representada por una codificación del vector $\vec{v}$ mencionado anteriormente (Sección \ref{eq:sol_pso}).\\ 
-Como test estadístico, es utilizado el \emph{Pearson's chi-squared goodness-off-fit}. Los resultados muestran la mejora que se logra a la estimación inicial, comparando estos resultados con otra propuesta similar la cual se expone en un trabajo previo de los mismos autores \cite{Heckenbergerova13}, en donde se utiliza la misma estrategia pero reemplazando el PSO con algoritmos genéticos. Sin embargo, estos resultados no consiguen pasar el test estadístico impuesto por ellos mismos, por lo que existe trabajo futuro  a realizar para mejorar la propuesta y lograr la precisión deseada.\\
+Como test estadístico, es utilizado el \emph{Pearson's chi-squared goodness-off-fit}. Los resultados muestran la mejora que se logra a la estimación inicial, comparando estos resultados con otra propuesta similar la cual se expone en un trabajo previo de los mismos autores \cite{Heckenbergerova13}, en donde se utiliza la misma estrategia pero reemplazando el PSO con algoritmos genéticos. Sin embargo, los resultados del PSO no consiguen pasar el test estadístico impuesto por ellos mismos, por lo que existe trabajo futuro  a realizar para mejorar la propuesta y lograr la precisión deseada.\\
 Los resultados obtenidos para los datos recolectados en el aeropuerto de St John localizado en Newfoundland, Canadá, son apreciables en la figura \ref{fig:dir_pso}.
 \begin{figure}[h!]
     \centering    
     \includegraphics[height=50mm]{figures/dir_pso.png} 
-    \caption{Ajuste dirección del viento, aeropuerto St. John.\\Creado por Heckenbergerova et al \cite{Heckenbergerova15}.}
+    \caption{Ajuste dirección del viento, aeropuerto St. John.}
+    \caption*{Fuente: Creado por Heckenbergerova et al \cite{Heckenbergerova15}.}
     \vspace{-.25cm} 
     \label{fig:dir_pso}
 \end{figure}
 
 %%TODO explicar trabajo de los españoles...
-Otro trabajo interesante de revisar es el caso de estudio realizado por Carta et al. \cite{Carta07}, en donde se utiliza la \emph{finite mixture of von Mises distribution} para representar la velocidad direccional de viento. El ajuste es realizado mediante el método de mínimos cuadrados, y resuelto con el algoritmo Levenberg-Marquardt \cite{Gavin16} el cual requiere de un punto de partida o solución inicial. Para ello, utilizan el mismo método que se propone en el trabajo de Heckenbergerova et al. \cite{Heckenbergerova13} el cual se utiliza en este trabajo y que es explicado en la siguiente sección \ref{ss:model_math_dir}. La calidad de la solución es medida a través del test $R^2$, y dentro de las conclusiones que se obtienen, es que más de 6 mezclas (\emph{mixtures}) de von Mises no incrementan considerablemente el valor de $R^2$.\\
+Otro trabajo interesante de revisar es el caso de estudio realizado por Carta et al. \cite{Carta07}, en donde se utiliza la \emph{finite mixture of von Mises distribution} para representar la velocidad direccional de viento. El ajuste es realizado mediante el método de mínimos cuadrados, y resuelto con el algoritmo Levenberg-Marquardt \cite{Gavin16} el cual requiere de un punto de partida o solución inicial. Para ello, utilizan el mismo método que se propone en el trabajo de Heckenbergerova et al. \cite{Heckenbergerova13} el cual se utiliza en este trabajo y se explicará en la siguiente sección \ref{ss:model_math_dir}. La calidad de la solución es medida a través del test $R^2$, y dentro de las conclusiones que se obtienen, es que más de 6 mezclas (\emph{mixtures}) de von Mises no incrementan considerablemente el valor de $R^2$.\\
 El método es aplicado a datos recolectados desde dos estaciones del clima en el archipiélago de las islas Canarias. Una vez más, se confirma que la \emph{finite mixture of von Mises distribution} es aplicable a distintas regiones con una o más direcciones predominantes. 
 
 \section{Resumen del capítulo}
