--- a/doc/5_Aplicacion.tex
+++ b/doc/5_Aplicacion.tex
@@ -15,7 +15,8 @@ En meteorología, la velocidad del viento se registra en nudos por segundo, pero
 El sistema de referencia utilizado para la interpretación de los datos de dirección del viento es el conocido como la rosa de los vientos \cite{RosaViento}. Dicho sistema ubica el Norte en el grado 0, al Este en el grado 90, al Sur en el grado 180 y al Oeste en el grado 270, siendo la dirección determinada el origen desde donde proviene el viento. Ejemplo, si la dirección predominante del viento en cierto intervalo de tiempo es de 90 grados, entonces diremos que la corriente de viento proviene desde el este.
 
 \begin{figure}[ht!]
-\caption{Esquema de uso del algoritmo}
+\caption{Esquema de uso del algoritmo.}
+\caption*{Fuente: Elaboración Propia.}
 \input{tikzFigures/flowChartAlg}
 \label{esq:PSO_ALG}
 \end{figure}
@@ -35,7 +36,8 @@ El Dr. Samir Kouro, ingeniero civil electrónico de la Universidad Técnica Fede
     \centering
     \captionsetup{justification=centering,margin=2cm}
         \includegraphics[width=0.8\textwidth]{figures/result_2014_ejemplo_potencial.png}  
-    \caption{Ejemplo de zonas a evaluar en la velocidad del viento.\\ Fuente: Elaboración propia.}
+    \caption{Ejemplo de zonas a evaluar en la velocidad del viento.}
+    \caption*{Fuente: Elaboración propia.}
     \label{fig:ejemplo_potencial}
 \end{figure}
 
@@ -43,7 +45,8 @@ El Dr. Samir Kouro, ingeniero civil electrónico de la Universidad Técnica Fede
     \centering
     \captionsetup{justification=centering,margin=2cm}
         \includegraphics[width=0.8\textwidth]{figures/ejemplo_emplazamiento.jpg}  
-    \caption{Ejemplo emplazamiento turbinas eólicas.\\ Fuente: Jorge Mírez \cite{figureEmplacement}.}
+    \caption{Ejemplo emplazamiento turbinas eólicas.}
+    \caption*{Fuente: Jorge Mírez \cite{figureEmplacement}.}
     \label{fig:ejemplo_emplazamiento}
 \end{figure}
 %En el trabajo de Shata et al. \cite{Shata05}, se menciona que el rango de generación eléctrica para el viento es entre los 5 y 6 metros por segundo. Por lo observado en la sección de resultados 
@@ -59,7 +62,8 @@ La distribución de Weibull, puede proveer de información relativa a las veloci
     \centering
     \captionsetup{justification=centering,margin=2cm}
         \includegraphics[width=0.8\textwidth]{figures/pesticide_wind.png} 
-    \caption{Principales procesos que interactúan en el comportamiento de los pesticidas después de su aplicación.\\ Fuente: Bedos \cite{Bedos01}.}
+    \caption{Principales procesos que interactúan en el comportamiento de los pesticidas después de su aplicación.}
+    \caption*{Fuente: Bedos \cite{Bedos01}.}
     \label{fig:ejemplo_pesticidas}
     
 \end{figure}
